# rust-react-personal-website

./: Cargo.toml  package-lock.json  package.json  readme.md
src/: index.html  main.jsx  main.rs
src/pages/Home/: index.jsx
src/utils/: renderer.rs
