[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
once_cell = "1.16"
regex = "1.7"
